Import of MJFLICK/Sysync-0.20 from CPAN.
gitpan-cpan-distribution: Sysync
gitpan-cpan-version:      0.20
gitpan-cpan-path:         MJFLICK/Sysync-0.20.tar.gz
gitpan-cpan-author:       MJFLICK
gitpan-cpan-maturity:     released

--- a/defaults/default.conf
+++ b/defaults/default.conf
@@ -15,10 +15,9 @@ users:
    - { uid: 34, username: backup, homedir: /var/backups, shell: /bin/sh }
    - { uid: 65534, username: nobody, homedir: /nonexistent, shell: /bin/sh }
    - { uid: 100, gid: 101,  username: libuuid, homedir: /var/lib/libuuid, shell: /bin/sh }
-   - { uid: 101, gid: 103, username: syslog, homedir: /home/syslgo, shell: /bin/false }
+   - { uid: 101, gid: 103, username: syslog, homedir: /home/syslog, shell: /bin/false }
    - { uid: 102, username: sshd, homedir: /var/run/sshd, shell: /usr/sbin/nologin }
    - { uid: 103, username: ntpd, homedir: /var/run/openntpd, shell: /bin/false }
-   - { uid: 104, username: 'Debian-exim', gid: 109, homedir: /var/spool/exim4, shell: /bin/false }
 groups:
    - { gid: 4, groupname: adm }
    - { gid: 5, groupname: tty }
@@ -42,7 +41,6 @@ groups:
    - { gid: 104, groupname: ssh }
    - { gid: 106, groupname: mlocate }
    - { gid: 107, groupname: landscape }
-   - { gid: 109, groupname: 'Debian-exim' }
    - { gid: 65534, groupname: nogroup }
 # only import users from the follow groups
 # use all for all users
