Import of MJFLICK/Sysync-0.23 from CPAN.
gitpan-cpan-distribution: Sysync
gitpan-cpan-version:      0.23
gitpan-cpan-path:         MJFLICK/Sysync-0.23.tar.gz
gitpan-cpan-author:       MJFLICK
gitpan-cpan-maturity:     released

--- a/defaults/default.conf
+++ b/defaults/default.conf
@@ -46,3 +46,16 @@ groups:
 # use all for all users
 user_groups:
    - all
+files:
+   - directory: /etc/
+     owner: root
+     group: root
+     mode: 600
+   - file: /etc/sysync-example.conf
+     owner: root
+     group: root
+     mode:  0600
+     source: files/sysync-example.conf
+
+
+
