Import of MJFLICK/Sysync-0.24 from CPAN.
gitpan-cpan-distribution: Sysync
gitpan-cpan-version:      0.24
gitpan-cpan-path:         MJFLICK/Sysync-0.24.tar.gz
gitpan-cpan-author:       MJFLICK
gitpan-cpan-maturity:     released

--- a/defaults/sysync.conf
+++ b/defaults/sysync.conf
@@ -9,3 +9,6 @@ salt_prefix: '$6$'
 
 # max workers used by sysyncd
 max_workers: 20
+
+# do not build password {passed/group/shadow} data
+# no_passwd_control: 1
