--- a/META.yml
+++ b/META.yml
@@ -18,11 +18,14 @@ no_index:
   directory:
     - defaults
     - inc
+    - t
   file:
     - post_install.PL
 requires:
   Digest::MD5: 0
   File::Copy: 0
+  File::Find: 0
+  File::Path: 0
   IPC::Open3: 0
   YAML: 0
   perl: 5.8.4
@@ -31,4 +34,4 @@ resources:
   homepage: http://sysync.nongnu.org
   license: http://www.gnu.org/licenses/agpl-3.0.html
   repository: git://git.savannah.nongnu.org/sysync.git
-version: 0.23
+version: 0.24
