Import of MJFLICK/Sysync-0.25 from CPAN.
gitpan-cpan-distribution: Sysync
gitpan-cpan-version:      0.25
gitpan-cpan-path:         MJFLICK/Sysync-0.25.tar.gz
gitpan-cpan-author:       MJFLICK
gitpan-cpan-maturity:     released

--- a/t/data/hosts/spoon.conf
+++ b/t/data/hosts/spoon.conf
@@ -46,16 +46,10 @@ groups:
 # use all for all users
 user_groups:
    - all
-#files:
-#   - directory: /etc/
-#     owner: root
-#     group: root
-#     mode: 600
-#   - file: /etc/sysync-example.conf
-#     owner: root
-#     group: root
-#     mode:  0600
-#     source: files/sysync-example.conf
-
-
-
+files:
+   - file: /etc/secret-data.conf
+     owner: root
+     group: root
+     mode:  0600
+     data: |
+        Secret data!
