--- a/defaults/sysync.conf
+++ b/defaults/sysync.conf
@@ -12,3 +12,10 @@ max_workers: 20
 
 # do not build password {passed/group/shadow} data
 # no_passwd_control: 1
+
+# connect to this user on remote machines
+# if you use another user here, add them to the default host and setup
+# a sudoer rule similar to:
+#    sysync ALL=(root)NOPASSWD:/usr/bin/rsync
+sync_as_user: root
+
