--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Simplistic system management'
 author:
-  - 'Ohio-Pennsylvania Software, LLC.'
+  - ', 2013 Bizowie'
 build_requires:
   ExtUtils::MakeMaker: 6.59
 configure_requires:
@@ -34,4 +34,4 @@ resources:
   homepage: http://sysync.nongnu.org
   license: http://www.gnu.org/licenses/agpl-3.0.html
   repository: git://git.savannah.nongnu.org/sysync.git
-version: 0.33
+version: 0.34
